--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title> Branching Practice Site </title>
+    <title> Happy Trails Travel Agency</title>
   </head>
   <body>
-    <h1> Branching </h1>
-    <h2> A website to practice branching with Git. </h2>
-    <p> This page has been created in order to practice branching with Git and GitHub. By creating branches, we can work on different versions of the same code in the same repository simultaneously!  </p>
+  	<div>
+	    <h1> Branching </h1>
+	    <h2> A website to practice branching with Git. </h2>
+	    <p> This page has been created in order to practice branching with Git and GitHub. By creating branches, we can work on different versions of the same code in the same repository simultaneously!  </p>
+  	</div>
   </body>
 </html>
